<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Verbes Français</string>
    <string name="TextView">TextView</string>
    <string name="home">Home</string>
    <string name="Toast">Todo</string>
    <string name="close">Close</string>
    <string name="send_email">Send Email</string>
    <string name="button_conj">Conjugation</string>
    <string name="button_gram">Grammar</string>
    <string name="button_exercise">Exercises</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_mail">Message</string>
    <string name="btn_share">Share</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="score">Score</string>
    <string name="textscore">New Score </string>
    <string name="hightscore">Hightest Score: </string>
    <string name="tryagain">Try again </string>
    <string name="QuestiontoAnswer">Question to Answer</string>
    <string name="Email">Email</string>
    <string name="Share">Share</string>
    <string name="Close">Close</string>
    <string name="choice_exercice">Choice Exercice</string>
    <string name="etre_avoir">être et avoir</string>
    <string name="premiergroup">premier groupe</string>
    <string name="deuxgroup">deuxième groupe</string>
    <string name="troisgroup">troisième groupe</string>
    <string name="participepasse">participe passé</string>
    <string name="groupe_verbe">groupe des verbes</string>
    <string name="trouver_verbe">trouvez le groupe</string>
    <string name="verbea">Verbe en A</string>
    <string name="verbeb">Verbe en B</string>
    <string name="verbec">Verbe en C</string>
    <string name="verbed">Verbe en D</string>
    <string name="verbee">Verbe en E</string>
    <string name="verbefgh">Verbe en F, G, H</string>
    <string name="verbeijkl">Verbe en I, J, K, L</string>
    <string name="verbemnop">Verbe en M, N, O, P</string>
    <string name="verbeqp">Verbe en Q, R</string>
    <string name="verbestuvz">Verbe en S, T, U, V, Z</string>
    <string-array name="verbe_en_a">
        <item>abaisser</item>
        <item>abandonner</item>
        <item>abasoudir</item>
        <item>abattre</item>
        <item>abêtir</item>
        <item>abhorrer</item>
        <item>abîmer</item>
        <item>ablolir</item>
        <item>abonder</item>
        <item>abonner</item>
        <item>aborder</item>
        <item>aboutir</item>
        <item>aboyer</item>
        <item>abréger</item>
        <item>abreuver</item>
        <item>abriter</item>
        <item>abrutir</item>
        <item>absenter</item>
        <item>absoudre</item>
        <item>abstenir</item>
        <item>abstraire</item>
        <item>abuser</item>
        <item>accabler</item>
        <item>accaparer</item>
        <item>accéder</item>
        <item>accélérer</item>
        <item>accentuer</item>
        <item>accepter</item>
        <item>accoler</item>
        <item>accommoder</item>
        <item>accompagner</item>
        <item>accomplir</item>
        <item>accorder</item>
        <item>accoucher</item>
        <item>accourir</item>
        <item>accrocher</item>
        <item>accroire</item>
        <item>accroître</item>
        <item>accroupir</item>
        <item>accueillir</item>
        <item>accumuler</item>
        <item>accuser</item>
        <item>acharner</item>
        <item>acheminer</item>
        <item>acheter</item>
        <item>achever</item>
        <item>aciérer</item>
        <item>aciseler</item>
        <item>acquérir</item>
        <item>acquiescer</item>
        <item>acquitter</item>
        <item>acter</item>
        <item>activer</item>
        <item>actualiser</item>
        <item>adapter</item>
        <item>additionner</item>
        <item>adhérer</item>
        <item>adire</item>
        <item>adjoindre</item>
        <item>admettre</item>
        <item>administrer</item>
        <item>admirer</item>
        <item>adonner</item>
        <item>affirmer</item>
        <item>adore</item>
        <item>adoucir</item>
        <item>adresser</item>
        <item>advenir</item>
        <item>aérer</item>
        <item>affaiblir</item>
        <item>affecter</item>
        <item>affectionner</item>
        <item>afférer</item>
        <item>affermir</item>
        <item>afficher</item>
        <item>affiner</item>
        <item>affirmer</item>
        <item>affliger</item>
        <item>affoler</item>
        <item>affranchir</item>
        <item>affronter</item>
        <item>agacer</item>
        <item>agenouiller</item>
        <item>aggraver</item>
        <item>agir</item>
        <item>agiter</item>
        <item>agonir</item>
        <item>agrafer</item>
        <item>agrandir</item>
        <item>agréer</item>
        <item>agréger</item>
        <item>agresser</item>
        <item>agripper</item>
        <item>aguerrir</item>
        <item>aider</item>
        <item>aiguiller</item>
        <item>aiguiser</item>
        <item>ailler</item>
        <item>aimer</item>
        <item>airer</item>
        <item>ajouter</item>
        <item>alerter</item>
        <item>aliéner</item>
        <item>aligner</item>
        <item>alimenter</item>
        <item>aliter</item>
        <item>allécher</item>
        <item>alléger</item>
        <item>alléguer</item>
        <item>aller</item>
        <item>allier</item>
        <item>allonger</item>
        <item>allouer</item>
        <item>allumer</item>
        <item>alourdir</item>
        <item>altérer</item>
        <item>aluner</item>
        <item>alunir</item>
        <item>amarrer</item>
        <item>amasser</item>
        <item>améliorer </item>
        <item>aménager </item>
        <item>amener </item>
        <item>amenuiser </item>
        <item>amerrir </item>
        <item>amoindrir </item>
        <item>amonceler </item>
        <item>amorcer </item>
        <item>amortir </item>
        <item>amourer </item>
        <item>amplifier </item>
        <item>amuïr </item>
        <item>amuser </item>
        <item>analyser </item>
        <item>anéantir </item>
        <item>animer </item>
        <item>annihiler </item>
        <item>annoncer </item>
        <item>annoter </item>
        <item>annuler </item>
        <item>anticiper </item>
        <item>apaiser </item>
        <item>apercevoir </item>
        <item>apeurer </item>
        <item>apitoyer </item>
        <item>aplanir </item>
        <item>aplatir </item>
        <item>apparaître </item>
        <item>apparenter </item>
        <item>apparier </item>
        <item>apparoir </item>
        <item>appartenir </item>
        <item>appauvrir </item>
        <item>appeler </item>
        <item>appendre </item>
        <item>applaudir </item>
        <item>appliquer </item>
        <item>apporter </item>
        <item>apposer </item>
        <item>apprécier </item>
        <item>appréhender </item>
        <item>apprendre </item>
        <item>apprêter </item>
        <item>approcher </item>
        <item>approfondir </item>
        <item>approprier </item>
        <item>approuver </item>
        <item>approvisionner </item>
        <item>appuyer </item>
        <item>arborer </item>
        <item>arguer </item>
        <item>arracher </item>
        <item>arranger </item>
        <item>arrêter </item>
        <item>arriver </item>
        <item>arrondir </item>
        <item>arroser </item>
        <item>aspirer </item>
        <item>assagir </item>
        <item>assaillir </item>
        <item>assainir </item>
        <item>assassiner </item>
        <item>assembler </item>
        <item>assener </item>
        <item>asséner </item>
        <item>asseoir </item>
        <item>asservir </item>
        <item>assiéger </item>
        <item>assimiler </item>
        <item>assister </item>
        <item>associer </item>
        <item>assombrir </item>
        <item>assomer </item>
        <item>assortir </item>
        <item>assoupir </item>
        <item>assouplir </item>
        <item>assouvir </item>
        <item>assujettir </item>
        <item>assumer </item>
        <item>assurer </item>
        <item>astreindre </item>
        <item>attacher </item>
        <item>attaquer </item>
        <item>attarder </item>
        <item>atteindre </item>
        <item>atteler </item>
        <item>attendre </item>
        <item>attendrir </item>
        <item>attenter </item>
        <item>atterrer </item>
        <item>atterrir </item>
        <item>attester </item>
        <item>attirer </item>
        <item>attiser </item>
        <item>attraper </item>
        <item>attribuer </item>
        <item>augmenter </item>
        <item>autoriser </item>
        <item>autosuggestionner </item>
        <item>avaler </item>
        <item>avancer </item>
        <item>aventurer </item>
        <item>avérer </item>
        <item>avertir </item>
        <item>aviser </item>
        <item>avoir </item>
        <item>avouer </item>
        <item>avoyer </item>
        <item>axer </item>
    </string-array>
    <string-array name="verbe_en_b">
        <item>baigner </item>
        <item>bailler </item>
        <item>bâiller </item>
        <item>baisser </item>
        <item>balader </item>
        <item>balancer </item>
        <item>balayer </item>
        <item>balbutier </item>
        <item>bander </item>
        <item>bannir </item>
        <item>baptiser </item>
        <item>barrer </item>
        <item>barrier </item>
        <item>basculer </item>
        <item>baser </item>
        <item>bâter </item>
        <item>bâtir </item>
        <item>battre </item>
        <item>bavarder </item>
        <item>baver </item>
        <item>bayer </item>
        <item>béer </item>
        <item>bégayer </item>
        <item>bêler </item>
        <item>bénéficier </item>
        <item>bénir </item>
        <item>bercer </item>
        <item>besogner </item>
        <item>bienvenir </item>
        <item>biner </item>
        <item>biper </item>
        <item>biser </item>
        <item>blaguer </item>
        <item>blâmer </item>
        <item>blanchir </item>
        <item>blêmir </item>
        <item>blesser </item>
        <item>bleuir </item>
        <item>bloquer </item>
        <item>blottir </item>
        <item>boire </item>
        <item>boiser </item>
        <item>boiter </item>
        <item>boîter </item>
        <item>bonder </item>
        <item>bondir </item>
        <item>bonifier </item>
        <item>bosser </item>
        <item>botter </item>
        <item>boucher </item>
        <item>bouder </item>
        <item>bouffer </item>
        <item>bouger </item>
        <item>bouillir </item>
        <item>bouler </item>
        <item>bouleverser </item>
        <item>bourrer </item>
        <item>bousculer </item>
        <item>bouter </item>
        <item>braire </item>
        <item>bramer </item>
        <item>brancher </item>
        <item>brandir </item>
        <item>branler </item>
        <item>brayer </item>
        <item>breveter </item>
        <item>bricoler </item>
        <item>briller </item>
        <item>brimbaler </item>
        <item>brimbaler </item>
        <item>briser </item>
        <item>bronzer </item>
        <item>brosser </item>
        <item>brouter </item>
        <item>broyer </item>
        <item>bruire </item>
        <item>brûler </item>
        <item>brumer </item>
        <item>brunir </item>
        <item>budgéter </item>
        <item>buriner </item>
    </string-array>
</resources>