<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.verbes.drmas.verbesfranais.conjugation">


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/verbeA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeA"
            android:text="@string/verbea"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verbeB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeB"
            android:text="@string/verbeb"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verbeC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeC"
            android:text="@string/verbec"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verbeD"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeD"
            android:text="@string/verbed"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verbeE"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeE"
            android:text="@string/verbee"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verbefgh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeFGH"
            android:text="@string/verbefgh"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verbeijkl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeIJKL"
            android:text="@string/verbeijkl"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verbemnop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeMNOP"
            android:text="@string/verbemnop"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verbeijklss"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeQP"
            android:text="@string/verbeqp"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verbemnops"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="80dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verbes"
            android:onClick="verbeSTUVZ"
            android:text="@string/verbestuvz"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_weight="1"
            android:contentDescription="@string/Email"
            android:onClick="img_mail"
            app:srcCompat="@drawable/emails" />

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_weight="1"
            android:contentDescription="@string/Share"
            android:onClick="img_share"
            app:srcCompat="@drawable/share" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_weight="1"
            android:contentDescription="@string/Close"
            android:onClick="img_close"
            app:srcCompat="@drawable/delete" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
