<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.verbes.drmas.verbesfranais.exercice_home">


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/choice_exercice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_share"
            android:padding="10dp"
            android:text="@string/choice_exercice"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/etre_avoir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_home_exercice"
            android:onClick="etre_avoir"
            android:padding="6dp"
            android:text="@string/etre_avoir"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/premiergroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_home_exercice"
            android:onClick="premiergroup"
            android:padding="6dp"
            android:text="@string/premiergroup"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/duexgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_home_exercice"
            android:onClick="deuxgroup"
            android:padding="6dp"
            android:text="@string/deuxgroup"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/troisgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_home_exercice"
            android:onClick="troisgroup"
            android:padding="6dp"
            android:text="@string/troisgroup"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/participepasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_home_exercice"
            android:onClick="participepasse"
            android:padding="6dp"
            android:text="@string/participepasse"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/groupe_verbe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_home_exercice"
            android:onClick="groupe_verbe"
            android:padding="6dp"
            android:text="@string/groupe_verbe"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_weight="1"
            android:contentDescription="@string/Email"
            android:onClick="img_mail"
            app:srcCompat="@drawable/emails" />

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_weight="1"
            android:contentDescription="@string/Share"
            android:onClick="img_share"
            app:srcCompat="@drawable/share" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_weight="1"
            android:contentDescription="@string/Close"
            android:onClick="img_close"
            app:srcCompat="@drawable/delete" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
